@@ -1,3 +1,5 @@
+- Fix subform crud in subform subgroup when controller is embedded
+
 = 3.6.0.rc1
 - Cleanup: deprecate ActiveScaffold.set_defaults for ActiveScaffold.defaults, rename some setters
 - Fix adding new action links on request with threadsafety enabled
